--- a/Medac-stars/src/main/java/medac/stars/ui/GameHistory.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/GameHistory.form
@@ -24,14 +24,14 @@
           <text value="Volver al Menú Principal"/>
         </properties>
       </component>
-      <scrollpane id="eb19c">
+      <scrollpane id="eb19c" binding="historyTableScrollPane" custom-create="true">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="bc87d" class="javax.swing.JTable" binding="table1" custom-create="true" default-binding="true">
+          <component id="bc87d" class="javax.swing.JTable" binding="historyTable" custom-create="true">
             <constraints/>
             <properties>
               <autoCreateRowSorter value="true"/>
