--- a/Medac-stars/src/main/java/medac/stars/ui/GameHistory.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/GameHistory.form
@@ -13,6 +13,11 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-16777216"/>
+          <borderPainted value="false"/>
+          <focusPainted value="false"/>
+          <focusable value="false"/>
+          <foreground color="-1"/>
           <text value="Iniciar Partida / Unirse a Partida"/>
         </properties>
       </component>
@@ -21,6 +26,11 @@
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-16777216"/>
+          <borderPainted value="false"/>
+          <focusPainted value="false"/>
+          <focusable value="false"/>
+          <foreground color="-1"/>
           <text value="Volver al Menú Principal"/>
         </properties>
       </component>
