--- a/Medac-stars/src/main/java/medac/stars/ui/arena/addArena.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/arena/addArena.form
@@ -169,6 +169,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="a&#xf1;ade el numero de objetos..."/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField2ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
