--- a/Medac-stars/src/main/java/medac/stars/ui/JoinGame.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/JoinGame.form
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="medac.stars.ui.JoinGame">
-  <grid id="27dc6" binding="JoinGamePanel" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="JoinGamePanel" custom-create="true" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="870" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <opaque value="true"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="ada78" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -13,7 +15,9 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <opaque value="false"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="97143" class="javax.swing.JLabel">
@@ -21,6 +25,7 @@
               <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1"/>
               <text value="Equipo 1"/>
             </properties>
           </component>
@@ -29,6 +34,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="3" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1"/>
               <text value="Jugador 1"/>
             </properties>
           </component>
@@ -40,12 +46,22 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="86f15" class="javax.swing.JButton" binding="unirseButton" default-binding="true">
+          <component id="86f15" class="javax.swing.JButton" binding="joinButton">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="10" fill="0" indent="3" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-16777216"/>
+              <borderPainted value="false"/>
+              <contentAreaFilled value="true"/>
+              <defaultCapable value="true"/>
+              <focusPainted value="false"/>
+              <focusable value="false"/>
+              <foreground color="-1"/>
+              <requestFocusEnabled value="false"/>
+              <rolloverEnabled value="false"/>
               <text value="Unirse"/>
+              <verifyInputWhenFocusTarget value="false"/>
             </properties>
           </component>
           <component id="25921" class="javax.swing.JLabel" binding="slot2Label" custom-create="true">
@@ -65,15 +81,25 @@
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <opaque value="false"/>
+        </properties>
         <border type="none"/>
         <children>
-          <component id="ed0a0" class="javax.swing.JButton" binding="CANCELARButton" default-binding="true">
+          <component id="ed0a0" class="javax.swing.JButton" binding="cancelButton">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="1" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-16777216"/>
+              <borderPainted value="false"/>
+              <focusPainted value="false"/>
+              <focusable value="false"/>
+              <foreground color="-1"/>
+              <requestFocusEnabled value="false"/>
+              <rolloverEnabled value="false"/>
               <text value="CANCELAR"/>
+              <verifyInputWhenFocusTarget value="false"/>
             </properties>
           </component>
           <component id="c0269" class="javax.swing.JLabel" binding="arenaNameLabel" custom-create="true">
@@ -89,6 +115,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1"/>
               <text value="Nombre Arena"/>
             </properties>
           </component>
@@ -99,7 +126,9 @@
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <opaque value="false"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="3d024" class="javax.swing.JLabel">
@@ -107,6 +136,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="7" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1"/>
               <text value="Equipo 2"/>
             </properties>
           </component>
@@ -115,6 +145,7 @@
               <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="8" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1"/>
               <text value="Jugador 1"/>
             </properties>
           </component>
@@ -136,12 +167,20 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="91c82" class="javax.swing.JButton" binding="unirseButton1" default-binding="true">
+          <component id="91c82" class="javax.swing.JButton" binding="joinButton2">
             <constraints>
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="10" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-16777216"/>
+              <borderPainted value="false"/>
+              <focusPainted value="false"/>
+              <focusable value="false"/>
+              <foreground color="-1"/>
+              <requestFocusEnabled value="false"/>
+              <rolloverEnabled value="false"/>
               <text value="Unirse"/>
+              <verifyInputWhenFocusTarget value="false"/>
             </properties>
           </component>
         </children>
