--- a/Medac-stars/src/main/java/medac/stars/ui/arena/EditArena.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/arena/EditArena.form
@@ -141,6 +141,9 @@
           <Font name="Comic Sans MS" size="14" style="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfEditarNombreActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JCheckBox" name="cbCuentaAtrasEditar">
       <Properties>
