--- a/Medac-stars/src/main/java/medac/stars/ui/arena/EditArena.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/arena/EditArena.form
@@ -140,6 +140,9 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Comic Sans MS" size="14" style="0"/>
         </Property>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="arena.getName()" type="code"/>
+        </Property>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfEditarNombreActionPerformed"/>
