Menu con mensaje de cierre
Solo se añade un mensaje emergente de cierre

--- a/Medac-stars/src/main/java/medac/stars/ui/arena/AddArena.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/arena/AddArena.form
@@ -45,7 +45,7 @@
                           <Component id="tfDescripcion" alignment="0" min="-2" pref="202" max="-2" attributes="0"/>
                           <Component id="tfNuevoNombre" alignment="0" min="-2" pref="180" max="-2" attributes="0"/>
                           <Component id="cbCuentaAtras" min="-2" max="-2" attributes="0"/>
-                          <Component id="jSpinner1" min="-2" max="-2" attributes="0"/>
+                          <Component id="jSpinner1" min="-2" pref="52" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="133" max="-2" attributes="0"/>
                   </Group>
@@ -73,14 +73,14 @@
                       <Component id="cbCuentaAtras" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="9" max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="jSpinner1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="jlimagenArena" min="-2" pref="193" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="11" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
