--- a/Medac-stars/src/main/java/medac/stars/ui/JoinGame.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/JoinGame.form
@@ -29,7 +29,7 @@
               <text value="Equipo 1"/>
             </properties>
           </component>
-          <component id="1da0f" class="javax.swing.JLabel">
+          <component id="1da0f" class="javax.swing.JLabel" binding="player1Label">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="3" use-parent-layout="false"/>
             </constraints>
@@ -141,7 +141,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="4f0e2" class="javax.swing.JLabel">
+          <component id="4f0e2" class="javax.swing.JLabel" binding="player3Label">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="8" use-parent-layout="false"/>
             </constraints>
