--- a/Medac-stars/src/main/java/medac/stars/ui/login/principal/FrmPantallaPrincipalUsuario.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/login/principal/FrmPantallaPrincipalUsuario.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
+<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="PANTALLA PRINCIPAL USUARIO"/>
@@ -109,6 +109,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Ver Medac Stars"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtverMedacStarsActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="txtjugar">
           <Properties>
@@ -122,6 +125,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Chat"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtchatActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="txtsalir">
           <Properties>
