Cambio de nombre de botones MenuInicial
Cambio de bombre del boton del logout para saber que ese boton hace referencia al logout

--- a/Medac-stars/src/main/java/medac/stars/ui/medacstar/MenuInicialGestionMedacStars.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/medacstar/MenuInicialGestionMedacStars.form
@@ -50,7 +50,7 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="jbSalir" min="-2" pref="69" max="-2" attributes="0"/>
                                   <EmptySpace max="32767" attributes="0"/>
-                                  <Component id="jButton6" min="-2" pref="77" max="-2" attributes="0"/>
+                                  <Component id="jLogout" min="-2" pref="77" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
@@ -88,7 +88,7 @@
                   <EmptySpace min="-2" pref="78" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jbSalir" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
-                      <Component id="jButton6" alignment="3" min="-2" pref="38" max="-2" attributes="0"/>
+                      <Component id="jLogout" alignment="3" min="-2" pref="38" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
               </Group>
@@ -206,7 +206,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbSalirActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton6">
+        <Component class="javax.swing.JButton" name="jLogout">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="0" green="0" red="0" type="rgb"/>
@@ -224,6 +224,9 @@
               </Border>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jLogoutActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
