Cambio de nombre de variables
Cambio de nombre de variables para que sean mas explicativas y se sepa que boton, panel, label hace referencia

--- a/Medac-stars/src/main/java/medac/stars/ui/medacstar/GestionMedacStars.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/medacstar/GestionMedacStars.form
@@ -47,12 +47,12 @@
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel5" alignment="0" min="-2" pref="88" max="-2" attributes="0"/>
+                          <Component id="jLDescripcion" alignment="0" min="-2" pref="88" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jLabel2" alignment="1" min="-2" pref="88" max="-2" attributes="0"/>
-                                  <Component id="jLabel3" alignment="1" min="-2" pref="88" max="-2" attributes="0"/>
-                                  <Component id="jLabel4" alignment="1" min="-2" pref="88" max="-2" attributes="0"/>
+                                  <Component id="jLNombre" alignment="1" min="-2" pref="88" max="-2" attributes="0"/>
+                                  <Component id="jLFuerza" alignment="1" min="-2" pref="88" max="-2" attributes="0"/>
+                                  <Component id="jLVelocidad" alignment="1" min="-2" pref="88" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="282" max="-2" attributes="0"/>
                               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
@@ -76,7 +76,7 @@
           </Group>
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
-              <Component id="jButton2" min="-2" pref="61" max="-2" attributes="0"/>
+              <Component id="jCancelarMedac" min="-2" pref="61" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
               <Component id="bGuardarMedac" min="-2" pref="64" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="142" max="-2" attributes="0"/>
@@ -119,7 +119,7 @@
                       <Component id="jbCargarImagen" min="-2" pref="28" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="146" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jButton2" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                          <Component id="jCancelarMedac" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                           <Component id="bGuardarMedac" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
@@ -131,17 +131,17 @@
                               <EmptySpace min="-2" pref="150" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="jLabel2" min="-2" pref="26" max="-2" attributes="0"/>
+                              <Component id="jLNombre" min="-2" pref="26" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
-                              <Component id="jLabel3" min="-2" pref="26" max="-2" attributes="0"/>
+                              <Component id="jLFuerza" min="-2" pref="26" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
-                              <Component id="jLabel4" min="-2" pref="26" max="-2" attributes="0"/>
+                              <Component id="jLVelocidad" min="-2" pref="26" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="tfSpeed" linkSize="2" min="-2" pref="32" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <Component id="jLabel5" min="-2" pref="26" max="-2" attributes="0"/>
+                      <Component id="jLDescripcion" min="-2" pref="26" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="tfDescription" linkSize="2" min="-2" pref="32" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="202" max="-2" attributes="0"/>
@@ -238,7 +238,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfUrlActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton2">
+    <Component class="javax.swing.JButton" name="jCancelarMedac">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="0" green="0" red="0" type="rgb"/>
@@ -254,7 +254,7 @@
         </Property>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jCancelarMedacActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="bGuardarMedac">
@@ -276,22 +276,22 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bGuardarMedacActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel2">
+    <Component class="javax.swing.JLabel" name="jLNombre">
       <Properties>
         <Property name="text" type="java.lang.String" value="Nombre"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel3">
+    <Component class="javax.swing.JLabel" name="jLFuerza">
       <Properties>
         <Property name="text" type="java.lang.String" value="Fuerza"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel4">
+    <Component class="javax.swing.JLabel" name="jLVelocidad">
       <Properties>
         <Property name="text" type="java.lang.String" value="Velocidad"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel5">
+    <Component class="javax.swing.JLabel" name="jLDescripcion">
       <Properties>
         <Property name="text" type="java.lang.String" value="Descripci&#xf3;n"/>
       </Properties>
